# manager-frontend

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs
web/: .eslintrc.js  package.json  vue.config.js
web/public/: index.html
web/src/: i18n.js  main.js  net.js  router.js  store.js
web/src/components/base/: Item.vue  ItemGroup.vue  MaterialCard.vue  MaterialChartCard.vue
web/src/locales/: zhCn.json
web/src/plugins/: echarts.js  vuetify.js
web/src/service/: api.js
web/src/views/account/: account.vue  info.vue  member.vue
web/src/views/config/: fs.vue
web/src/views/dashboard/: Dashboard.vue
web/src/views/dashboard/component/: Tabs.vue  Typography.vue
web/src/views/dashboard/components/core/: AppBar.vue  Drawer.vue  Footer.vue  Settings.vue
web/src/views/dashboard/pages/: UserProfile.vue
web/src/views/finance/: account.vue  finance.vue  platform.vue
web/src/views/task/: task.vue
