[package]
name = "frontend"
version = "0.6.0"
authors = ["Calm0406 <calm0406@163.com>"]
edition = "2024"
description = "angular-example-frontend description."
build = "build.rs"
[dependencies]
actix-web = { version = "4.11.0" }
actix-web-static-files = { version = "4.0.1", features = ["change-detection"] }
static-files = { version = "0.2.5" }

[build-dependencies]
static-files = { version = "0.2.5" }

[gitflow]
production_branch = "main"
development_branch = "develop"
feature_branch_prefix = "feature/"
hotfix_branch_prefix = "hotfix/"
version_tag_prefix = "v"
origin = "origin"